# sanqing-ea-mt5

./: .gitignore  AGENTS.md  CLAUDE.md  README-ops.md  README.md  TimeProfitEA.mq5  TimeProfitEA.mqh  mt5-rewrite-requirements .md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.omx/: metrics.json
.sisyphus/: rules.md
app/: __init__.py  run.py
config/: runtime.ini  runtime.ini.example
mt5/: TickRelay.mq5  剥头皮脚本.mq5  抓爆发行情的脚本mq5  根据影线下单脚本.mq5
mt5-ea/: README.md  SanqingEA.mq5  cleanup.bat
mt5-ea/Core/: ContextBuilder.mqh  DailyRiskController.mqh  EntryGate.mqh  ExecutionEngine.mqh  Indicators.mqh  ProtectionEngine.mqh  StateStore.mqh
mt5-ea/Include/: Common.mqh  ContextBuilder.mqh  DailyRiskController.mqh  EntryGate.mqh  ExecutionEngine.mqh  Indicators.mqh  ProtectionEngine.mqh  StateStore.mqh  StrategySelector.mqh
mt5-ea/Main/: Common.mqh  SanqingEA.mq5
mt5-ea/Strategies/: ExpansionFollowStrategy.mqh  PullbackStrategy.mqh  ReversalStrategy.mqh  TrendContinuationStrategy.mqh
plans/: architecture.md  ea_improvement_plan.md
python_backtest/: compare_backtrader.py  research_profitable_strategy.py  run_full_optimizer.py  run_optimizer.py  run_tick_backtest.py
scripts/: run_semantic_suite.py
src/: __init__.py
src/adapters/: __init__.py  broker_base.py  mt5_broker.py  sim_broker.py
src/app/: __init__.py  orchestrator.py  poll_ingress.py  run.py  run_config.py  tick_http_ingress.py  tick_ingress.py
src/config/: __init__.py  validation.py
src/core/: __init__.py  context_builder.py  daily_risk_controller.py  entry_gate.py  execution_engine.py  protection_engine.py  reconciliation.py  state_store.py  strategy_selector.py
src/domain/: __init__.py  constants.py  models.py
src/indicators/: __init__.py  adx.py  atr.py  ema.py
src/strategies/: __init__.py  bare_k.py  base.py  expansion_follow.py  pullback.py  reversal.py  trend_continuation.py
src/utils/: __init__.py  logger.py  rounding.py
tests/: __init__.py
tests/e2e/: __init__.py  test_semantics_regression.py
tests/fixtures/: demo_day.json
(+60 files in other folders)
